--- a/freelancer_inicio/css/styles.css
+++ b/freelancer_inicio/css/styles.css
@@ -19,6 +19,8 @@ body{
     font-size: 16px;
     font-family: 'Krub',sans-serif;
     background-image: linear-gradient(to top, #dfe9f3 0%, var(--blanco) 100%);
+    background-repeat: no-repeat;
+    height: 100vh;
 }
 
 h1 {
@@ -255,7 +257,46 @@ h1,h2,h3 {
     }
 }
 
+
 footer {
     text-align: center;
     color: var(--gris);
+}
+
+.github {
+    display: block;
+    padding: 3rem;
+    text-align: center;
+}
+
+.contenedorprincipal {
+}
+
+.biografia {
+    padding: 3rem;
+    margin: 2rem 2rem;
+    display: grid;
+    row-gap: 2rem;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(10,1fr);
+    .presentacion, .titulobio, .texto {
+        grid-column: 1/3;
+    }
+    .texto:nth-child(3), .texto:nth-child(4){
+        grid-column: 1/2;
+    }
+    /* .texto:nth-child(3), .texto:nth-child(4){
+        grid-column: 1 / 3;
+    } */
+}
+
+.presentacion {
+    color: rgb(210, 37, 37);
+    font-weight: bold;
+    text-align: justify;
+}
+
+.biografia h2,h3 {
+    color: var(--secundario);
+    font-weight: bold;
 }
